2008-03-01  Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/language_*.php: Updated and cleared header.

2008-02-28 Sancho Lerena <slerena@gmail.com>

	* operation/agentes/tactical.php, operation/servers/view_server.php: Fixed
	stupid bug calculating progress percent due some modules missasigned to
	a network server because are Keepalive modules.

2008-02-28 Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_monitores.php: Improved usability adding titles
	in images.

2008-02-26 Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql, pandoradbdata_12_to_13.sql: Updated SQL for network 
	components and other minor issue.

2008-02-19  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/tactical.php: Solved small visual issue with rows.
	
	* include/languages/language_en.php: Changed CASE in menu texts.

2008-02-16  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_*.php: Improved usability adding titles in
	images.

2008-02-12  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_agente.php, general/header.php: small changes
	to solve small problem with header in IE7.

2008-02-12  Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/language_en.php: Corrected typo.

2008-02-11  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/agentes/module_manager.php: Closed some html tags.
	Added title for the action icons.

2008-02-09  Raul Mateos  <raulofpandora@gmail.com>

	* pandoradb_data.sql: Solved stupid bug with ending ";". Deleted duplicated
	insert.

2008-02-01  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_*.php: Added code to help admin user
	to create agents and alerts, adding buttons to godmode.
	
	* include/languages/language_es_es.php: Updated text.

2008-01-21 Sancho Lerena <slerena@gmail.com>

	* operation/visual_console/render_view.php: Applied some patches from
	guruevi to improve graphic size and tooltil. Label is still displayed on