@@ -111,11 +111,16 @@ if (comprueba_login() == 0) {
 			else 
 				echo "-";
 
-			if (($network_server == 1) OR ($data_server == 1) OR ($recon_server == 1)){
-                if ($percentil > 100)
+            // Progress bar render
+            if ($snmp_server == 0) {
+                // Check bad values for percentile
+                if ($percentil > 100){
                         $percentil = 100;
-				// Progress bar render
-				echo '<img src="reporting/fgraph.php?tipo=progress&percent='.$percentil.'&height=18&width=80">';
+                }
+                if ($percentil < 0){
+                        $percentil = 0;
+                }
+                echo '<img src="reporting/fgraph.php?tipo=progress&percent='.$percentil.'&height=18&width=80">';
             }
 				
 			// Number of modules
